--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.19.0
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
